# Medical-Data-Anonymization-DICOM-DCMTK

interestingData/: anonymousTags.txt  interestingTags.txt  interestingXmlElements.txt
src/: CMakeLists.txt  anonymization.h  anonymizer.cpp  anonymizer.h  askDialog.cpp  askDialog.h  askPatientInfo.cpp  askPatientInfo.h  askPatientInfo.ui  askSomething.cpp  askSomething.h  boundingBox.h  config.cpp  config.h  copy.cpp  copy.h  extract.cpp  extract.h  file.cpp  file.h  image.cpp  image.h  imageEditor.cpp  imageEditor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  patient.cpp  patient.h  property.cpp  property.h  qImageLabel.cpp  qImageLabel.h  scanning.cpp  scanning.h  series.cpp  series.h  study.cpp  study.h  (+4 more)
